fix: made overflow hidden for body

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    overflow: hidden;
   }
 
   .wrapper {
